Adding Google API Library
Adding push notifications:
google-services.json

Revision on the hosting, adding functions and information

--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -2,7 +2,7 @@
   "onboarding_1_text": "Магазин товаров первой необходимости в Москве. Большой выбор товаров и заказ в один клик!",
   "onboarding_2_text": "Быстрая доставка выбранных товаров. Красиво и качественно упакуем и доставим на дом!",
   "onboarding_3_text": "Выберите нужные товары, отложите в корзину и оформите заказ. Всё очень просто!",
-  "select_your_items_to_buy": "Интернет-Магазин AppBiz",
+  "select_your_items_to_buy": "Kebab-House",
   "order_item_from_your_shopping_bag": "Доставим ваши заказы в срок!",
   "our_system_delivery_item_to_you": "Заказывайте У Нас!",
   "skip": "Пропустить",
