Added fonts: - family: Montserrat
Changes in functionality

Logo changes

Changes in theme settings

--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -13,7 +13,7 @@
   "add_an_address": "Add an address",
   "home": "Главная",
   "all_categories": "Все Категории",
-  "categories": "Категории",
+  "categories": "Категории123",
   "shopping_bag": "Корзина",
   "my_order": "Мои Заказы",
   "address": "Адреса",
@@ -118,7 +118,7 @@
   "add_the_location_correctly": "Добавьте правильное местоположение",
   "label_us": "Пометить Как",
   "address_line_01": "Адрес",
-  "address_line_02": "23/A Block,Sector 4",
+  "address_line_02": "Укажите адрес",
   "delivery_address": "Адрес Доставки",
   "contact_person_name": "Имя и Фамилия",
   "enter_contact_person_name": "Введите данные получателя",
