--- a/assets/language/ru.json
+++ b/assets/language/ru.json
@@ -46,7 +46,7 @@
   "reset": "Reset",
   "price": "Цена",
   "rating": "Rating",
-  "category": "Категории",
+  "category": "Категории123",
   "sort_by": "Sort by",
   "relevance": "Relevance",
   "low_to_high": "Недорогие",
@@ -118,7 +118,7 @@
   "add_the_location_correctly": "Добавьте правильное местоположение",
   "label_us": "Пометить Как",
   "address_line_01": "Адрес",
-  "address_line_02": "23/A Block,Sector 4",
+  "address_line_02": "Укажите адрес",
   "delivery_address": "Адрес Доставки",
   "contact_person_name": "Имя и Фамилия",
   "enter_contact_person_name": "Введите данные получателя",
